# leaky-bucket

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  weekly.yml
examples/: basic.rs  block-forever.rs  explicit_coordinator.rs  over-max.rs  over_max.rs  simple.rs  threaded.rs  try-acquire.rs  try_acquire.rs  unfair-scheduling.rs  unfair_scheduling.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
src/: lib.rs  linked_list.rs
tests/: issue5.rs  limits.rs  test_core_movements.rs  test_drop.rs  test_fast_path.rs  test_idle.rs  test_overflow.rs  test_rate_limit_target.rs  test_threaded.rs  test_try_acquire.rs
