[package]
name = "leaky-bucket"
version = "0.12.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "Futures-aware rate limiter implementation."
documentation = "https://docs.rs/leaky-bucket"
readme = "README.md"
homepage = "https://github.com/udoprog/leaky-bucket"
repository = "https://github.com/udoprog/leaky-bucket"
license = "MIT/Apache-2.0"
keywords = ["ratelimit", "tokenbucket", "throttle"]
categories = ["algorithms", "network-programming", "concurrency"]

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1.26"

[dev-dependencies]
anyhow = "1.0.40"
futures = "0.3"
helpers = { path = "helpers" }
pin-project = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time"] }
