[package]
name = "leaky-bucket"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "Futures-aware rate limiter implementation."
documentation = "https://docs.rs/leaky-bucket"
readme = "README.md"
homepage = "https://github.com/udoprog/leaky-bucket"
repository = "https://github.com/udoprog/leaky-bucket"
license = "MIT/Apache-2.0"
keywords = ["ratelimit", "throttle", "tokenbucket"]
categories = ["algorithms", "concurrency", "network-programming"]

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1.26.0", features = ["time"] }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.70"
futures = "0.3.27"
helpers = { path = "helpers" }
pin-project = "1.0.12"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "rt", "time"] }
