[package]
name = "leaky-bucket"
version = "1.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.63"
description = "A token-based rate limiter based on the leaky bucket algorithm."
documentation = "https://docs.rs/leaky-bucket"
readme = "README.md"
homepage = "https://github.com/udoprog/leaky-bucket"
repository = "https://github.com/udoprog/leaky-bucket"
license = "MIT OR Apache-2.0"
keywords = ["async", "futures", "ratelimit", "throttle", "tokenbucket"]
categories = ["algorithms", "concurrency", "network-programming"]

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1.28.1", features = ["time"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }

[dev-dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
helpers = { path = "helpers" }
pin-project = "1.0.12"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "rt", "time", "test-util"] }
